--- a/source/sass — копия/blocks/map.scss
+++ b/source/sass — копия/blocks/map.scss
@@ -11,11 +11,7 @@
   // outline: 3px solid $special-border-lite-green-color; // специальные цыета для рамок по заданию
   // outline-offset: -3px; // специальные цыета для рамок по заданию
   @media (min-width: $tablet-width) {
-    margin-top: 6px;
-  }
-
-  @media (min-width: $desktop-width) {
-    margin-top: 3px;
+    margin-top: 0;
   }
 }
 
