--- a/source/sass/blocks/reasons.scss
+++ b/source/sass/blocks/reasons.scss
@@ -16,25 +16,6 @@
   }
 }
 
-.reasons__items {
-  min-height: 211px;
-
-  margin-top: -4px;
-  margin-right: auto;
-  margin-left: auto;
-
-  @media (min-width: $tablet-width) {
-    margin-top: -3px;
-    margin-bottom: 85px;
-  }
-
-  @media (min-width: $desktop-width) {
-    margin-top: -15px;
-
-    position: relative;
-  }
-}
-
 .reasons__triangle-top {
   display: block;
 
@@ -50,128 +31,6 @@
     background-image: url("../img/triangle-top-tablet-desktop.svg");
 
     max-width: 1199px;
-  }
-}
-
-.reasons__triangle-bottom {
-  display: block;
-
-  background-image: url("../img/triangle-bottom.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-
-  max-width: 768px;
-  min-width: 320px;
-  height: 37px;
-
-  @media (min-width: $tablet-width) {
-    display: none;
-  }
-}
-
-.reasons__items-special {
-  min-height: 190px;
-
-  background-color: $lite-blue-color;
-}
-
-.reasons__items-some {
-  padding-top: 30px;
-
-  background-color: $grey-color;
-
-  @media (min-width: $tablet-width) {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
-
-    margin-top: -129px;
-
-    padding-top: 0;
-
-    min-height: 256px;
-  }
-
-  @media (min-width: $desktop-width) {
-    min-height: 258px;
-
-    margin-top: -128px;
-  }
-}
-
-.reasons__items-wrapper-main {
-  min-height: 141px;
-
-  margin-top: -17px;
-  margin-right: auto;
-  margin-left: auto;
-
-  @media (min-width: $desktop-width) {
-    margin-top: -9px;
-  }
-}
-
-.reasons__items-inner-main {
-  min-height: 152px;
-}
-
-.reasons__items-two {
-  margin-top: 2px;
-
-  @media (min-width: $tablet-fix-two-width) {
-    margin-top: -26px;
-  }
-
-  @media (min-width: $tablet-fix-three-width) {
-    margin-top: 1px;
-  }
-
-  @media (min-width: $tablet-fix-three-width) {
-    margin-top: -18px;
-  }
-
-  @media (min-width: $tablet-fix-eight-width) {
-    margin-top: 1px;
-  }
-
-  @media (min-width: $tablet-fix-nine-width) {
-    margin-top: -20px;
-  }
-}
-
-.reasons__items-three {
-  margin-top: 15px;
-
-  @media (min-width: $tablet-width) {
-    margin-top: -46px;
-  }
-}
-
-.reasons__items-header-people {
-  @media (min-width: $tablet-width) {
-    padding-top: 49px;
-    padding-right: 45px;
-    padding-left: 44px;
-  }
-
-  @media (min-width: $tablet-fix-one-width) {
-    padding-top: 20px;
-  }
-
-  @media (min-width: $tablet-fix-three-width) {
-    padding-top: 45px;
-  }
-
-  @media (min-width: $tablet-fix-five-width) {
-    padding-top: 23px;
-  }
-
-  @media (min-width: $tablet-fix-eleven-width) {
-    padding-top: 23px;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-top: 3px;
   }
 }
 
@@ -245,10 +104,57 @@
   }
 }
 
+.reasons__items {
+  min-height: 211px;
+
+  margin-top: -4px;
+  margin-right: auto;
+  margin-left: auto;
+
+  @media (min-width: $tablet-width) {
+    margin-top: -3px;
+    margin-bottom: 85px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: -15px;
+
+    position: relative;
+  }
+}
+
 .reasons__items-wrapper {
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 1fr max-content;
+  }
+}
+
+.reasons__items-special {
+  min-height: 190px;
+
+  background-color: $lite-blue-color;
+}
+
+.reasons__items-block-inner {
+  @media (min-width: $tablet-width) {
+    padding-top: 34px;
+  }
+}
+
+.reasons__triangle-bottom {
+  display: block;
+
+  background-image: url("../img/triangle-bottom.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+
+  max-width: 768px;
+  min-width: 320px;
+  height: 37px;
+
+  @media (min-width: $tablet-width) {
+    display: none;
   }
 }
 
@@ -260,81 +166,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.reasons__items-devil {
-  margin-top: -99px;
-
-  @media (min-width: $tablet-width) {
-    position: relative;
-    bottom: 56px;
-  }
-}
-
-.reasons__items-block-add {
-  margin-right: 20px;
-  margin-left: 20px;
-
-  border-bottom: 1px solid $lighter-grey-color;
-
-  @media (min-width: $tablet-width) {
-    border-bottom: none;
-  }
-}
-
-.reasons__items-block-inner {
-  @media (min-width: $tablet-width) {
-    padding-top: 34px;
-  }
-}
-
-.reasons__items-special-location-one {
-  @media (min-width: $tablet-width) {
-    grid-column: 1;
-    grid-row: 1;
-  }
-}
-
-.reasons__items-block-add-three {
-  padding-right: 13px;
-  padding-left: 12px;
-
-  @media (min-width: $tablet-width) {
-    padding-right: 6px;
-    padding-left: 6px;
-
-    position: relative;
-    top: -2px;
-  }
-}
-
-.reasons__items-block-add-four {
-  padding-right: 21px;
-  padding-left: 22px;
-
-  @media (min-width: $tablet-fix-three-width) {
-    padding-top: 16px;
-  }
-
-  @media (min-width: $tablet-fix-four-width) {
-    padding-top: 2px;
-  }
-}
-
-.reasons__items-block-add-five {
-  padding-right: 1px;
-  padding-left: 1px;
-
-  @media (min-width: $tablet-width) {
-    padding-right: 55px;
-    padding-left: 58px;
-  }
-
-  @media (min-width: $tablet-fix-eleven-width) {
-    padding-top: 34px;
-    padding-right: 66px;
-    padding-left: 56px;
-  }
 }
 
 .reasons__items-block-special-one {
@@ -355,25 +186,6 @@
   }
 }
 
-.reasons__items-info-special {
-  padding-right: 26px;
-  padding-left: 27px;
-}
-
-.reasons__items-block-devil {
-  padding-top: 41px;
-
-  @media (min-width: $desktop-width) {
-    width: 284px;
-
-    padding-left: 57px;
-    padding-right: 59px;
-
-    position: relative;
-    top: 9px;
-  }
-}
-
 .reasons__items-header {
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
@@ -386,14 +198,6 @@
 
   @media (min-width: $tablet-width) {
     font-size: 21px;
-  }
-}
-
-.reasons__items-header-devil {
-  @media (min-width: $tablet-width) {
-    padding-top: 9px;
-    padding-right: 47px;
-    padding-left: 48px;
   }
 }
 
@@ -423,39 +227,6 @@
   }
 }
 
-.reasons__items-number-road {
-  @media (min-width: $tablet-width) {
-    position: relative;
-    top: -2px;
-    right: 2px;
-  }
-
-  @media (min-width: $tablet-fix-two-width) {
-    top: 27px;
-  }
-
-  @media (min-width: $tablet-fix-three-width) {
-    top: -2px;
-  }
-}
-
-.reasons__items-number-people {
-  @media (min-width: $tablet-width) {
-    position: relative;
-    top: -3px;
-    right: -1px;
-  }
-
-  @media (min-width: $tablet-fix-one-width) {
-    top: -4px;
-    right: 5px;
-  }
-
-  @media (min-width: $tablet-fix-three-width) {
-    top: -1px;
-  }
-}
-
 .reasons__items-info {
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
@@ -473,53 +244,6 @@
     font-size: 14px;
 
     padding-top: 5px;
-  }
-}
-
-.reasons__items-info-road {
-  @media (min-width: $tablet-width) {
-    margin-right: 9px;
-    margin-left: 4px;
-  }
-
-  @media (min-width: $tablet-fix-two-width) {
-    position: relative;
-    top: 25px;
-  }
-
-  @media (min-width: $tablet-fix-three-width) {
-    top: -2px;
-  }
-}
-
-.reasons__items-info-devil {
-  @media (min-width: $tablet-width) {
-    padding-right: 46px;
-    padding-left: 44px;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-right: 43px;
-    padding-left: 26px;
-
-    position: relative;
-    left: 8px;
-  }
-}
-
-.reasons__items-info-people {
-  @media (min-width: $tablet-width) {
-    padding-right: 46px;
-    padding-left: 44px;
-  }
-
-  @media (min-width: $tablet-fix-one-width) {
-    position: relative;
-    top: -3px;
-  }
-
-  @media (min-width: $tablet-fix-three-width) {
-    top: 0;
   }
 }
 
@@ -587,6 +311,174 @@
 
   @media (min-width: $desktop-width) {
     background-color: $white-color;
+  }
+}
+
+.reasons__itemadd-item-home {
+  @media (min-width: $desktop-width) {
+    margin-left: -43px;
+  }
+}
+
+.reasons__itemadd-item-group {
+  display: flex;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.reasons__itemadd-item-pic {
+  @media (min-width: $tablet-width) {
+    padding-right: 10px;
+  }
+}
+
+.reasons__itemadd-item-header {
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 21px;
+
+    margin-top: 15px;
+
+    padding-right: 20px;
+  }
+}
+
+.reasons__itemadd-item-header-home {
+  position: relative;
+  bottom: 15px;
+
+  padding-left: 11px;
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+    bottom: -1px;
+    padding-left: 12px;
+  }
+}
+
+.reasons__itemadd-item-info {
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+
+  padding-right: 20px;
+  padding-left: 50px;
+
+  @media (min-width: $tablet-width) {
+    text-align: center;
+  }
+}
+
+.reasons__itemadd-item-info-home {
+  position: relative;
+  bottom: 38px;
+}
+
+.reasons__itemadd-item-info-br {
+  display: none;
+
+  @media (min-width: $desktop-width) {
+    display: block;
+  }
+}
+
+.reasons__items-devil {
+  margin-top: -99px;
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+    bottom: 56px;
+  }
+}
+
+.reasons__items-block-devil {
+  padding-top: 41px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 31px;
+    padding-right: 7px;
+    padding-left: 5px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 284px;
+
+    padding-left: 57px;
+    padding-right: 59px;
+
+    position: relative;
+    top: 9px;
+  }
+}
+
+.reasons__items-header-devil {
+  @media (min-width: $tablet-width) {
+    padding-top: 9px;
+    padding-right: 47px;
+    padding-left: 48px;
+  }
+}
+
+.reasons__items-info-devil {
+  @media (min-width: $tablet-width) {
+    padding-right: 46px;
+    padding-left: 44px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-right: 43px;
+    padding-left: 26px;
+
+    position: relative;
+    left: 8px;
+  }
+}
+
+.reasons__devil {
+  display: block;
+
+  background-color: #fcfcfc;
+  background-image: url("../img/photo-bridge@1x1-mobile.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+
+  margin-right: auto;
+  margin-left: auto;
+
+  max-width: 520px;
+  min-width: 320px;
+  height: 260px;
+
+  @media (min-width: $tablet-width) {
+    background-image: url("../img/photo-bridge@1x1-tablet.jpg");
+
+    width: 512px;
+    height: 256px;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-image: url("../img/photo-bridge@1x-desktop.jpg");
+    background-position-y: -14px;
+
+    width: 800px;
+    max-width: 100%;
+    height: 256px;
+  }
+}
+
+.reasons__items-special-location-one {
+  @media (min-width: $tablet-width) {
+    grid-column: 1;
+    grid-row: 1;
   }
 }
 
@@ -684,33 +576,6 @@
   }
 }
 
-.reasons__itemadd-item-pic-eat {
-  @media (min-width: $desktop-width) {
-    position: relative;
-    top: 3px;
-  }
-}
-
-.reasons__itemadd-item-group {
-  display: flex;
-
-  @media (min-width: $tablet-width) {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-}
-
-.reasons__items-wrapper-special {
-  @media (min-width: $tablet-width) {
-    display: grid;
-    grid-template-columns: max-content 1fr;
-
-    position: relative;
-    top: 11px;
-  }
-}
-
 .reasons__itemadd-item-location-three {
   position: relative;
   bottom: 35px;
@@ -719,6 +584,24 @@
   @media (min-width: $tablet-width) {
     grid-column: 3;
   }
+}
+
+.reasons__itemadd-item-header-gift {
+  position: relative;
+  bottom: 15px;
+
+  padding-left: 13px;
+
+  @media (min-width: $tablet-width) {
+    bottom: -4px;
+  }
+}
+
+.reasons__itemadd-item-info-gift {
+  position: relative;
+  bottom: 36px;
+
+  padding-left: 45px;
 }
 
 .reasons__itemadd-item-location-two {
@@ -735,42 +618,10 @@
   }
 }
 
-.reasons__itemadd-item-header {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 26px;
-
-  @media (min-width: $tablet-width) {
-    font-size: 21px;
-
-    margin-top: 15px;
-
-    padding-right: 20px;
-  }
-}
-
-.reasons__itemadd-item-header-home {
-  position: relative;
-  bottom: 15px;
-
-  padding-left: 11px;
-
-  @media (min-width: $tablet-width) {
+.reasons__itemadd-item-pic-eat {
+  @media (min-width: $desktop-width) {
     position: relative;
-    bottom: -1px;
-    padding-left: 12px;
-  }
-}
-
-.reasons__itemadd-item-header-gift {
-  position: relative;
-  bottom: 15px;
-
-  padding-left: 13px;
-
-  @media (min-width: $tablet-width) {
-    bottom: -4px;
+    top: 3px;
   }
 }
 
@@ -781,6 +632,11 @@
   }
 }
 
+.reasons__itemadd-item-info-burger {
+  position: relative;
+  bottom: 41px;
+}
+
 .reasons__itemadd-item-header-burger {
   position: relative;
   bottom: 20px;
@@ -788,79 +644,223 @@
   padding-left: 10px;
 }
 
-.reasons__itemadd-item-info {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 21px;
+.reasons__items-some {
+  padding-top: 30px;
 
-  padding-right: 20px;
-  padding-left: 50px;
+  background-color: $grey-color;
 
   @media (min-width: $tablet-width) {
-    text-align: center;
-  }
-}
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
 
-.reasons__itemadd-item-pic {
-  @media (min-width: $tablet-width) {
-    padding-right: 10px;
-  }
-}
+    margin-top: -132px;
 
-.reasons__itemadd-item-info-home {
-  position: relative;
-  bottom: 38px;
-}
+    padding-top: 20px;
+    padding-bottom: -11px;
 
-.reasons__itemadd-item-info-gift {
-  position: relative;
-  bottom: 36px;
-
-  padding-left: 45px;
-}
-
-.reasons__itemadd-item-info-burger {
-  position: relative;
-  bottom: 41px;
-}
-
-.reasons__devil {
-  display: block;
-
-  background-color: #fcfcfc;
-  background-image: url("../img/photo-bridge@1x1-mobile.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-
-  margin-right: auto;
-  margin-left: auto;
-
-  max-width: 520px;
-  min-width: 320px;
-  height: 260px;
-
-  @media (min-width: $tablet-width) {
-    background-image: url("../img/photo-bridge@1x1-tablet.jpg");
-
-    width: 512px;
-    height: 256px;
+    min-height: 242px;
   }
 
   @media (min-width: $desktop-width) {
-    background-image: url("../img/photo-bridge@1x-desktop.jpg");
-    background-position-y: -14px;
+    min-height: 258px;
 
-    width: 800px;
-    max-width: 100%;
-    height: 256px;
+    margin-top: -128px;
+
+    padding-top: 4px;
   }
 }
 
-.reasons__items-header-add,
-.reasons__items-number-add,
-.reasons__items-info-add {
-  color: $black-color;
+.reasons__items-wrapper-main {
+  min-height: 141px;
+
+  margin-top: -17px;
+  margin-right: auto;
+  margin-bottom: 17px;
+  margin-left: auto;
+
+  @media (min-width: $desktop-width) {
+    margin-top: -9px;
+  }
+}
+
+.reasons__items-block-add {
+  margin-right: 20px;
+  margin-left: 20px;
+
+  border-bottom: 1px solid $lighter-grey-color;
+
+  @media (min-width: $tablet-width) {
+    border-bottom: none;
+  }
+}
+
+.reasons__items-inner-main {
+  min-height: 152px;
+}
+
+.reasons__items-block-add-three {
+  padding-right: 13px;
+  padding-left: 12px;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 6px;
+    padding-left: 6px;
+
+    position: relative;
+    top: -2px;
+  }
+}
+
+.reasons__items-two {
+  margin-top: 2px;
+
+  @media (min-width: $tablet-fix-two-width) {
+    margin-top: -26px;
+  }
+
+  @media (min-width: $tablet-fix-three-width) {
+    margin-top: 1px;
+  }
+
+  @media (min-width: $tablet-fix-three-width) {
+    margin-top: -18px;
+  }
+
+  @media (min-width: $tablet-fix-eight-width) {
+    margin-top: 1px;
+  }
+
+  @media (min-width: $tablet-fix-nine-width) {
+    margin-top: -20px;
+  }
+}
+
+.reasons__items-block-add-four {
+  padding-right: 21px;
+  padding-left: 22px;
+
+  @media (min-width: $tablet-fix-three-width) {
+    padding-top: 16px;
+  }
+
+  @media (min-width: $tablet-fix-four-width) {
+    padding-top: 2px;
+  }
+}
+
+.reasons__items-number-road {
+  @media (min-width: $tablet-width) {
+    position: relative;
+    top: -2px;
+    right: 2px;
+  }
+
+  @media (min-width: $tablet-fix-two-width) {
+    top: 27px;
+  }
+
+  @media (min-width: $tablet-fix-three-width) {
+    top: -2px;
+  }
+
+  @media (min-width: $desktop-width) {
+    top: 0;
+  }
+}
+
+.reasons__items-info-road {
+  @media (min-width: $tablet-width) {
+    margin-right: 9px;
+    margin-left: 4px;
+  }
+
+  @media (min-width: $tablet-fix-two-width) {
+    position: relative;
+    top: 25px;
+  }
+
+  @media (min-width: $tablet-fix-three-width) {
+    top: -2px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-right: 35px;
+
+    top: 5px;
+    left: 8px;
+  }
+}
+
+.reasons__items-three {
+  margin-top: 15px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: -46px;
+  }
+
+  @media (min-width: $tablet-fix-one-width) {
+    margin-top: -19px;
+  }
+
+  @media (min-width: $tablet-fix-ten-width) {
+    margin-top: -47px;
+  }
+
+  @media (min-width: $tablet-fix-four-width) {
+    margin-top: -40px;
+  }
+}
+
+.reasons__items-header-people {
+  @media (min-width: $tablet-width) {
+    padding-top: 49px;
+    padding-right: 45px;
+    padding-left: 44px;
+  }
+
+  @media (min-width: $tablet-fix-one-width) {
+    padding-top: 20px;
+  }
+
+  @media (min-width: $tablet-fix-three-width) {
+    padding-top: 45px;
+  }
+
+  @media (min-width: $tablet-fix-five-width) {
+    padding-top: 23px;
+  }
+
+  @media (min-width: $tablet-fix-eleven-width) {
+    padding-top: 23px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 3px;
+  }
+}
+
+.reasons__items-block-add-five {
+  padding-right: 1px;
+  padding-left: 1px;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 55px;
+    padding-left: 58px;
+  }
+
+  @media (min-width: $tablet-fix-eleven-width) {
+    padding-top: 34px;
+    padding-right: 66px;
+    padding-left: 56px;
+
+    position: relative;
+    top: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 65px;
+  }
 }
 
 .reasons__peace-road-people {
@@ -871,18 +871,99 @@
   }
 }
 
-.reasons__itemadd-item-info-br {
-  display: none;
+.reasons__items-number-people {
+  @media (min-width: $tablet-width) {
+    position: relative;
+    top: -3px;
+    right: -1px;
+  }
+
+  @media (min-width: $tablet-fix-one-width) {
+    top: -4px;
+    right: 5px;
+  }
+
+  @media (min-width: $tablet-fix-three-width) {
+    top: -1px;
+  }
+
+  @media (min-width: $tablet-fix-eleven-width) {
+    top: -5px;
+  }
+
+  @media (min-width: $tablet-fix-ten-width) {
+    top: 25px;
+  }
+
+  @media (min-width: $tablet-fix-three-width) {
+    top: 14px;
+  }
+
+  @media (min-width: $tablet-fix-four-width) {
+    top: -1px;
+  }
 
   @media (min-width: $desktop-width) {
-    display: block;
+    top: -6px;
+    left: 1px;
   }
 }
 
-.reasons__itemadd-item-home {
-  @media (min-width: $desktop-width) {
-    margin-left: -43px;
+.reasons__items-info-special {
+  padding-right: 26px;
+  padding-left: 27px;
+}
+
+.reasons__items-info-people {
+  @media (min-width: $tablet-width) {
+    padding-right: 46px;
+    padding-left: 44px;
   }
+
+  @media (min-width: $tablet-fix-one-width) {
+    position: relative;
+    top: -3px;
+  }
+
+  @media (min-width: $tablet-fix-ten-width) {
+    top: 27px;
+  }
+
+  @media (min-width: $tablet-fix-three-width) {
+    top: 13px;
+  }
+
+  @media (min-width: $tablet-fix-four-width) {
+    top: -5px;
+  }
+
+  @media (min-width: $tablet-fix-twelve-width) {
+    top: -4px;
+  }
+
+  @media (min-width: $tablet-fix-eleven-width) {
+    top: -39px;
+  }
+
+  @media (min-width: $desktop-width) {
+    top: -32px;
+  }
+}
+
+.reasons__items-wrapper-special {
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: max-content 1fr;
+
+    position: relative;
+    top: 11px;
+  }
+}
+
+.reasons__items-header-add,
+.reasons__items-number-add,
+.reasons__items-info-add {
+  color: $black-color;
 }
 
 .reasons__items-header-br {
