5. Адаптивные декоративные элементы 16. Адаптивная графика для главной страницы

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -31,6 +31,7 @@ $special-border-blue-color: #0600ff;
 // специальные цыета для рамок по заданию
 
 // ширина экрана
+$mobile-width: 320px; // main
 $tablet-width: 768px; // main
 $tablet-fix-one-width: 782px; // main
 $tablet-fix-two-width: 815px; // main
