--- a/source/sass/blocks/reasons.scss
+++ b/source/sass/blocks/reasons.scss
@@ -251,7 +251,7 @@
   display: block;
 
   background-color: #fcfcfc;
-  background-image: url("../img/photo-city@1x1-mobile.jpg");
+  background-image: url("../img/city-index-mobile-1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
 
@@ -262,19 +262,34 @@
   min-width: 320px;
   height: 260px;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/city-index-mobile-2x.jpg");
+    background-size: 520px auto;
+  }
+
   @media (min-width: $tablet-width) {
-    background-image: url("../img/photo-city@1x-tablet.jpg");
+    background-image: url("../img/city-index-tablet-1x.jpg");
 
     width: 512px;
     height: 256px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/city-index-tablet-2x.jpg");
+      background-size: 512px auto;
+    }
   }
 
   @media (min-width: $desktop-width) {
-    background-image: url("../img/photo-city@1x-desltop.jpg");
+    background-image: url("../img/city-index-desktop-1x.jpg");
 
     width: 800px;
     max-width: 100%;
     height: 256px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/city-index-desktop-2x.jpg");
+      background-size: 800px auto;
+    }
   }
 }
 
@@ -447,7 +462,7 @@
   display: block;
 
   background-color: #fcfcfc;
-  background-image: url("../img/photo-bridge@1x1-mobile.jpg");
+  background-image: url("../img/bridge-index-mobile-1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
 
@@ -458,20 +473,36 @@
   min-width: 320px;
   height: 260px;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/bridge-index-mobile-2x.jpg");
+    background-size: 520px auto;
+  }
+
   @media (min-width: $tablet-width) {
-    background-image: url("../img/photo-bridge@1x1-tablet.jpg");
+    background-image: url("../img/bridge-index-tablet-1x.jpg");
 
     width: 512px;
     height: 256px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/bridge-index-tablet-2x.jpg");
+      background-size: 512px auto;
+    }
   }
 
   @media (min-width: $desktop-width) {
-    background-image: url("../img/photo-bridge@1x-desktop.jpg");
+    background-image: url("../img/bridge-index-desktop-1x.jpg");
     background-position-y: -14px;
 
     width: 800px;
     max-width: 100%;
     height: 256px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/bridge-index-desktop-2x.jpg");
+      background-size: 800px 270px;
+      background-position-y: -3px;
+    }
   }
 }
 
