--- a/source/sass/blocks/welcome.scss
+++ b/source/sass/blocks/welcome.scss
@@ -1,6 +1,6 @@
 .welcome {
   background-color: $lite-grey-color;
-  background-image: url("../img/background-mobile.jpg");
+  background-image: url("../img/background-index-mobile-1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
 
@@ -17,12 +17,17 @@
   flex-direction: column;
   align-items: center;
 
-  //outline: 3px solid $special-border-red-color; // специальные цыета для рамок по заданию
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/background-index-mobile-2x.jpg");
+    background-size: 901px auto;
+  }
+
+  // outline: 3px solid $special-border-red-color; // специальные цыета для рамок по заданию
   // outline-offset: -3px; // специальные цыета для рамок по заданию
 
   @media (min-width: $tablet-width) {
     background-color: $lite-grey-color;
-    background-image: url("../img/background-tablet-desktop.jpg");
+    background-image: url("../img/background-index-tablet-desktop-1x.jpg");
     background-repeat: no-repeat;
     background-position: center;
 
@@ -35,13 +40,18 @@
     min-width: 768px;
     height: 518px;
 
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/background-index-tablet-desktop-2x.jpg");
+      background-size: 1200px auto;
+    }
+
     // outline: 3px solid $special-border-red-color; // специальные цыета для рамок по заданию
     // outline-offset: -3px; // специальные цыета для рамок по заданию
   }
 
   @media (min-width: $desktop-width) {
     background-color: $lite-grey-color;
-    background-image: url("../img/background-tablet-desktop.jpg");
+    background-image: url("../img/background-index-tablet-desktop-1x.jpg");
     background-repeat: no-repeat;
     background-position: center;
 
@@ -51,6 +61,11 @@
     width: 1200px;
     min-width: 768px;
     height: 518px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/background-index-tablet-desktop-2x.jpg");
+      background-size: 1200px auto;
+    }
 
     // outline: 3px solid $special-border-red-color; // специальные цыета для рамок по заданию
     // outline-offset: -3px; // специальные цыета для рамок по заданию
