--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -869,6 +869,8 @@
   padding-bottom: 21px;
   padding-left: 20px;
 
+  resize: none;
+
   @media (min-width: $tablet-width) {
     min-width: 103%;
 
