--- a/source/sass/blocks/city.scss
+++ b/source/sass/blocks/city.scss
@@ -1,6 +1,6 @@
 .city {
   background-color: $lite-grey-color;
-  background-image: url("../img/background-mobile-catalog.jpg");
+  background-image: url("../img/background-catalog-mobile-1x.jpg");
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: -58px;
@@ -13,11 +13,16 @@
   min-width: 320px;
   height: 214px;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/background-catalog-mobile-2x.jpg");
+    background-size: 901px auto;
+  }
+
   // outline: 3px solid $special-border-blue-color; // специальные цыета для рамок по заданию
   // outline-offset: -3px; // специальные цыета для рамок по заданию
 
   @media (min-width: $tablet-width) {
-    background-image: url("../img/background-tablet-desktop-catalog.jpg");
+    background-image: url("../img/background-catalog-tablet-desktop-1x.jpg");
     background-position-y: -231px;
 
     margin-top: 0;
@@ -25,6 +30,11 @@
     width: 100%;
     max-width: 100%;
     height: 518px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/background-catalog-tablet-desktop-2x.jpg");
+      background-size: 1200px auto;
+    }
   }
 
   @media (min-width: $desktop-width) {
